testing/runner/tests/snapshot_tests/sorting/snapshots/sorting__order-by-desc.snap
---
source: sorting.sqltest
expression: "SELECT id, name, stock\n    FROM products\n    ORDER BY stock DESC;"
info:
  statement_type: SELECT
  tables:
    - products
  setup_blocks:
    - schema
  database: ":memory:"
---
QUERY PLAN
`--SCAN products USING INDEX idx_products_stock_desc

BYTECODE
addr  opcode          p1  p2  p3  p4                p5  comment
   0  Init             0  11   0                     0  Start at 11
   1  OpenRead         0   2   0  k(6,B,B,B,B,B,B)   0  table=products, root=2, iDb=0
   2  OpenRead         1   5   0  k(2,-B)            0  index=idx_products_stock_desc, root=5, iDb=0
   3  Rewind           1  10   0                     0  Rewind index idx_products_stock_desc
   4    DeferredSeek   1   0   0                     0
   5    IdxRowId       1   1   0                     0  r[1]=cursor 1 for index idx_products_stock_desc.rowid
   6    Column         0   1   2                     0  r[2]=products.name
   7    Column         0   4   3                     0  r[3]=products.stock
   8    ResultRow      1   3   0                     0  output=r[1..3]
   9  Next             1   4   0                     0
  10  Halt             0   0   0                     0
  11  Transaction      0   1   7                     0  iDb=0 tx_mode=Read
  12  Goto             0   1   0                     0
