testing/runner/tests/snapshot_tests/sorting/snapshots/sorting__order-by-nullable-desc.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, department
      FROM employees
      ORDER BY department DESC;
info:
  statement_type: SELECT
  tables:
  - employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN employees USING INDEX idx_employees_department

BYTECODE
addr  opcode          p1  p2  p3  p4              p5  comment
   0  Init             0  11   0                   0  Start at 11
   1  OpenRead         0   6   0  k(5,B,B,B,B,B)   0  table=employees, root=6, iDb=0
   2  OpenRead         1   8   0  k(2,B)           0  index=idx_employees_department, root=8, iDb=0
   3  Last             1  10   0                   0
   4    DeferredSeek   1   0   0                   0
   5    IdxRowId       1   1   0                   0  r[1]=cursor 1 for index idx_employees_department.rowid
   6    Column         0   1   2                   0  r[2]=employees.name
   7    Column         0   2   3                   0  r[3]=employees.department
   8    ResultRow      1   3   0                   0  output=r[1..3]
   9  Prev             1   4   0                   0
  10  Halt             0   0   0                   0
  11  Transaction      0   1   7                   0  iDb=0 tx_mode=Read
  12  Goto             0   1   0                   0
