testing/runner/tests/snapshot_tests/sorting/snapshots/sorting__order-by-with-nulls.snap
---
source: sorting.sqltest
expression: |-
  SELECT id, name, salary
      FROM employees
      ORDER BY salary;
info:
  statement_type: SELECT
  tables:
  - employees
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN employees USING INDEX idx_employees_salary

BYTECODE
addr  opcode          p1  p2  p3  p4              p5  comment
   0  Init             0  12   0                   0  Start at 12
   1  OpenRead         0   6   0  k(5,B,B,B,B,B)   0  table=employees, root=6, iDb=0
   2  OpenRead         1   7   0  k(2,B)           0  index=idx_employees_salary, root=7, iDb=0
   3  Rewind           1  11   0                   0  Rewind index idx_employees_salary
   4    DeferredSeek   1   0   0                   0
   5    IdxRowId       1   1   0                   0  r[1]=cursor 1 for index idx_employees_salary.rowid
   6    Column         0   1   2                   0  r[2]=employees.name
   7    Column         0   3   3                   0  r[3]=employees.salary
   8    RealAffinity   3   0   0                   0
   9    ResultRow      1   3   0                   0  output=r[1..3]
  10  Next             1   4   0                   0
  11  Halt             0   0   0                   0
  12  Transaction      0   1   7                   0  iDb=0 tx_mode=Read
  13  Goto             0   1   0                   0
